--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -22,6 +22,9 @@
                     Users
                 </a>
                 }
+                <a routerLink="insights" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">
+                    Insights
+                  </a>
                 <button (click)="logout()"
                     class="ml-4 px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 transition-colors">
                     Logout
@@ -64,6 +67,9 @@
                 Users
             </a>
             }
+            <a routerLink="insights" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">
+                Insights
+              </a>
             <button (click)="logout()"
                 class="w-full mt-2 px-3 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition-colors">
                 Logout
